# cumulus-file-rename

./: CHANGELOG.md  README.md  build.sh  copy_zip.py  dockerfile  pyproject.toml
.github/workflows/: build-pipeline.yml
cumulus_file_rename/: __init__.py  cumulus_file_rename.py
tests/: test_cumulus_file_rename.py
