[tool.poetry]
name = "cumulus-file-rename"
version = "2.3.0-alpha.0"
description = ""
authors = ["Yen, David (398B-Affiliate) <david.yen@jpl.nasa.gov>"]

[tool.poetry.dependencies]
python = "^3.9"
cumulus-process = "1.3.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^3.0.0"
pytest = "^5.2"
pylint = "^2.12.2"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.masonry.api"
